force-app/main/default/objects/leankor__GlobalWorkHour__c/leankor__GlobalWorkHour__c.object-meta.xml
<CustomObject>
    <description>Global Work Hours Availability.</description>
    <label>Resource Availability</label>
    <nameField>
        <displayFormat>GWH-{0000000000}</displayFormat>
        <label>Global Work Hour Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Availabilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>