force-app/main/default/objects/leankor__GlobalWorkHour__c/fields/leankor__BusinessHours__c.field-meta.xml
<CustomField>
    <fullName>leankor__BusinessHours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Business Hours.</description>
    <inlineHelpText>Choose predefined business hours.</inlineHelpText>
    <label>Business Hours</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>GlobalWorkHours</relationshipName>
    <type>Lookup</type>
</CustomField>