force-app/main/default/objects/leankor__GlobalWorkHour__c/fields/leankor__EndDate__c.field-meta.xml
<CustomField>
    <fullName>leankor__EndDate__c</fullName>
    <description>Effective end date of the working hours.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the date when the working hours is to end.</inlineHelpText>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>