force-app/main/default/objects/leankor__GlobalWorkHour__c/fields/leankor__StartDate__c.field-meta.xml
<CustomField>
    <fullName>leankor__StartDate__c</fullName>
    <description>Effective start date of the working hours.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the date when the working hours is to start.</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>