force-app/main/default/objects/leankor__GlobalWorkHour__c/validationRules/leankor__CheckStartAndEndDates.validationRule-meta.xml
<ValidationRule>
    <fullName>leankor__CheckStartAndEndDates</fullName>
    <active>true</active>
    <description>Start Date must be less than or equal to the End Date.</description>
    <errorConditionFormula>leankor__StartDate__c &gt;  leankor__EndDate__c</errorConditionFormula>
    <errorDisplayField>leankor__StartDate__c</errorDisplayField>
    <errorMessage>Start Date must be less than or equal to the End Date.</errorMessage>
</ValidationRule>