force-app/main/default/objects/leankor__GlobalWorkHour__c/listViews/leankor__All.listView-meta.xml
<ListView>
    <fullName>leankor__All</fullName>
    <columns>NAME</columns>
    <columns>leankor__BusinessHours__c</columns>
    <columns>leankor__StartDate__c</columns>
    <columns>leankor__EndDate__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>